# rust-proc-macro

./: Cargo.toml  README
hello_macro/: Cargo.toml
hello_macro/src/: lib.rs
thisisme/: Cargo.toml
thisisme/src/: main.rs
whoami/: Cargo.toml
whoami/src/: lib.rs
