[package]
name = "thisisme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = { path = "../whoami"}
serde = {version = "1.0.144",features = ["derive"]}
hello_macro = {path = "../hello_macro",features = ["hp"]}


[dev-dependencies.smol]
version = "1.2.5"